--- a/src/css/components/presentation-container.less
+++ b/src/css/components/presentation-container.less
@@ -12,4 +12,21 @@
         letter-spacing: 1.5px;
         font-weight: 400;
     }
+
+    #media-screen > .mobile-and-smaller({
+        height: 74vh;
+
+        .description {
+            width: 20rem;
+            font-size: 1.8rem;
+        }
+    });
+    #media-screen > .sm-mobile-only({
+        height: 70vh;
+
+        .description {
+            margin-top: 2.4rem;
+            font-size: 1.4rem;
+        }
+    });
 }
